# substreams-sink-entity-changes

./: .gitignore  .sfreleaser  CHANGELOG.md  Cargo.toml  README.md  RELEASE.md  buf.gen.yaml  build.rs  go.mod  substreams-entity-change-v0.1.0.spkg  substreams.yaml
.github/workflows/: buf.yml  push.yml
pb/sf/substreams/sink/entity/v1/: entity.pb.go
proto/: buf.md  buf.yaml  last_generate.txt
proto/entity/v1/: entity.proto
proto/sf/substreams/entity/v1/: entity.proto
proto/sf/substreams/sink/entity/v1/: entity.proto
src/: change.rs  helpers.rs  lib.rs
src/pb/: mod.rs  substreams.entity.v1.rs
substreams-entity-change/: Cargo.toml
substreams-entity-change/src/: change.rs  helpers.rs  lib.rs  tables.rs
substreams-entity-change/src/pb/: mod.rs  sf.substreams.entity.v1.rs  sf.substreams.sink.entity.v1.rs  substreams.entity.v1.rs
