[package]
name = "substreams-entity-change"
version = "0.1.0"
edition = "2021"
description = "Substreams entity change library containing helpers"

[dependencies]
prost = "0.11.0"
prost-types = "0.11.0"
base64 = "0.13.0"
substreams = { git = "https://github.com/streamingfast/substreams-rs", branch = "develop" }
