[package]
name = "substreams-entity-change"
version = "1.1.0"
edition = "2021"
description = "Substreams entity change library containing helpers"
authors = ["StreamingFast Contributors <team@streamingfast.io>"]
license = "Apache-2.0"
homepage = "https://substreams.streamingfast.io/"
repository = "https://github.com/streamingfast/substreams-entity-change"
readme = "../README.md"
keywords = [ "substreams", "streamingfast", "firehose", "thegraph", "entity"]
categories = ["api-bindings", "external-ffi-bindings", "wasm"]
rust-version = "1.63"

[dependencies]
prost = "0.11"
prost-types = "0.11"
base64 = "0.13"
substreams = "0.5"
