[package]
name = "substreams-entity-change"
edition.workspace = true
version.workspace = true
description.workspace = true
authors.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
prost = "0.11"
prost-types = "0.11"
base64 = "0.13"
substreams = "0.5"
